# ROOPLPPC

./: .gitignore  LICENSE  README.md  ROOPLPPC.cabal  stack.yaml
src/: AST.hs  ClassAnalyzer.hs  CodeGenerator.hs  MacroExpander.hs  PISA.hs  Parser.hs  ROOPLPPC.hs  ScopeAnalyzer.hs  TypeChecker.hs  VectorAnalyzer.hs
test/: ArrayUsageExample.pal  ArrayUsageExample.rplpp  BinaryTree.pal  BinaryTree.rplpp  DoublyLinkedList.pal  DoublyLinkedList.rplpp  Example.pal  Example.rplpp  LinkedList.pal  LinkedList.rplpp  RTM.pal  RTM.rplpp  test.pal
