name:                 ROOPLPPC
version:              0.1.0.0
synopsis:             ROOPL++ to PISA Compiler
-- description:
license:              MIT
license-file:         LICENSE
homepage:             https://github.com/cservenka/ROOPLPPC
author:               Martin Holm Cservenka
maintainer:           mhcservenka@gmail.com
category:             Language
-- copyright:
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >=1.10

executable ROOPLPPC
  main-is:              ROOPLPPC.hs
  other-modules:        AST
                      , ClassAnalyzer
                      , CodeGenerator
                      , MacroExpander
                      , PISA
                      , Parser
                      , ScopeAnalyzer
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
                      , text
                      , parsec
                      , mtl
                      , bytestring
                      , containers
                      , pretty-show
                      , pretty-simple
  hs-source-dirs:       src
  default-language:     Haskell2010
